# rtaudio

./: .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/br/com/teknetsys/rtaudio/: AudioDevice.java  MethodCallHandlerImpl.java  RtAudio.java  RtAudioPlugin.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/rtaudio_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: rtaudio.podspec
ios/Classes/: rtaudio.c
lib/: rtaudio.dart  rtaudio_android.dart  rtaudio_bindings_generated.dart
src/: CMakeLists.txt  miniaudio.c  rtaudio.c  rtaudio.h
windows/: CMakeLists.txt
